# pac2016

./: .gitignore  CMakeLists.txt  LE_SymSprsMat.cpp  LE_SymSprsMatAux.h  LE_SymSprsMatAuxFunc.h  LE_SymSprsMatBuggy.cpp  LE_SymSprsMatDef.h  LE_SymSprsMatFunc.h  LE_SymSprsMatInit.h  LE_SymSprsMatInitMirror.h  LUSolve.cpp  LUSolve.h  Makefile  Pub_AllocFunc.h  Pub_DbgDefFunc.h  Pub_DeallocFunc.h  Pub_Def.h  Pub_ErrDefFunc.h  dogSolve.cpp  optLUSolve.h  readme.txt  test1
