cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER icc)
project(pac2017)
#set(MKLLIB mkl_intel_lp64 mkl_intel_thread mkl_core)
set(CMAKE_CXX_STANDARD 11)
#find_package(OpenMP)
#if (OPENMP_FOUND)
#    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#endif()

set(MKLLIB)
add_executable(tt LUSolve.cpp)
add_library(ssm LE_SymSprsMat.cpp)
target_link_libraries(ssm ${MKLLIB} pthread dl m)
target_link_libraries(tt ssm)
